--- a/style.css
+++ b/style.css
@@ -143,23 +143,25 @@
 /* mailChimp */
 
 .box2{
+    background: #222;
     text-align: center;
     padding: 100px;
     font-size: 20px 
 }
 
 .box2 .contact{
-    text-align: left;
+    text-align: right;
+    color: #fff
 }
 
 .box2 h2{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .box2 .row a{
-    color: #111;
+    color: #fff;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 /* footer and Copyright stamp */
