--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@
 .box1 h1{
     font-size: 30px;
     font-weight: 100;
+    
 }
 
 .box1 p{
@@ -65,7 +66,7 @@
     border-radius: 5px; 
     background: #fff;
     color: #222;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 /* email input */
@@ -98,7 +99,7 @@
 }
 
 .box1 .buttonStream{
-    padding: 18px;
+    padding: 12px;
     background: #2ecc71;
     border:#2ecc71 2px solid;
 }
@@ -114,6 +115,18 @@
 
 /* some Media Queries */
 /* width 990px */
+@media only screen and (min-width:1000px){
+    .box1 h1{
+        font-size: 50px;
+        background: rgba(0,0,0,.1);
+        padding: 10px;
+    }
+    
+    .box1 h1:hover{
+        background: rgba(0,0,0,.2);
+        transition: .3s;
+    }
+}
 @media only screen and (max-width: 768px){
     .box1 .box1Con h1{
         font-size: 40px;
@@ -122,6 +135,17 @@
 @media only screen and (max-width: 550px){
     .box1 .box1Con h1{
         font-size: 30px;
+    }
+
+    .box1 .button{
+            margin-top: 10px;
+    }
+
+    .box2 .imgSchool{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
     }
 }
 @media only screen and (max-width: 600px){
@@ -137,14 +161,20 @@
     }
 }
 
+@media only screen and (min-width:990px){
+    .box2 .imgSchool{
+        width: 35%;
+    }
+}
+
 /* header 2 // box2  */
 /* mailChimp */
 
 .box2{
     background: #222;
     text-align: center;
-    padding: 100px;
-    font-size: 18px 
+    padding: 50px;
+    font-size: 20px 
 }
 
 .box2 .contact{
@@ -157,7 +187,7 @@
 }
 
 .box2 .row a{
-    color: #fff;
+    color: #fff; 
     text-decoration: none;
     font-size: 20px;
 }
