--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     position: relative;
     z-index: 1;
     color: #fff;
-    background: rgba(0,0,0,0);
+    background: rgba(0,0,0,.6);
     display: flex;
     justify-content: center;
     align-items: center;
